Wed Aug 29 09:41:51 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (main): Revert inadvertently-committed debugging
	  change to straycats logic.

Wed Aug 29 09:34:50 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Add Indonesian translation of NAME.

Wed Aug 29 09:29:36 BST 2007  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Document previous apropos change.

Wed Aug 29 09:26:23 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (apropos): Add output keys to a hashtable, and skip
	  any that have already been seen (Debian bug #259338).
	  (main): Create the hashtable on startup and free it on exit.

Tue Aug 28 19:16:18 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (format_display): Wait for the decomp pipeline in the
	  !format_cmd case too.

Tue Aug 28 19:07:53 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display_catman): Take a decompressor pipeline argument.
	  Connect it to format_cmd.
	  (display): Update call to display_catman.

Tue Aug 28 18:38:31 BST 2007  Colin Watson  <cjwatson@debian.org>

	Add a configuration file flag (NOCACHE) to disable cat page caching
	(thanks, Ralph Corderoy; Debian bug #196642).

	* src/manp.c (add_to_dirlist): Recognise NOCACHE.
	* src/man.c (display): Don't save a cat page if NOCACHE is set.
	* src/man_db.conf.in: Document NOCACHE.
	* man/man5/manpath.man5 (FORMAT): Document NOCACHE.
	* docs/NEWS: Document this.

Tue Aug 28 17:23:26 BST 2007  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Bump to 2.5.0; I think there's now enough to justify
	  that.

Tue Aug 28 17:19:16 BST 2007  Colin Watson  <cjwatson@debian.org>

	Implement and use a decompression library. This allows cat pages to
	be saved in the background (Debian bug #18452) and operation with a
	read-only /tmp (Debian bug #165499).

	* lib/pipeline.h (struct command): Add support for commands that
	  consist of calling a function rather than executing a process.