@@ -1,3 +1,10 @@
+Wed Aug 29 10:15:33 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* m4/man-path-progs.m4: Define HAVE_WITH-ARG if the program is
+	  found.
+	* configure.ac: Rely on the above rather than setting HAVE_GZIP,
+	  HAVE_COMPRESS, and HAVE_BZIP2 here.
+
 Wed Aug 29 09:41:51 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/mandb.c (main): Revert inadvertently-committed debugging
